--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="src/tests/java"/>
 	<classpathentry sourcepath="JRE_SRC" kind="var" path="JRE_LIB"/>
 	<classpathentry sourcepath="/Library/Frameworks/XUL.framework/Versions/1.8.0.1/sdk/lib/MozillaInterfaces-src.jar" kind="lib" path="lib/org.mozilla.xpcom_1.8.0.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3.8.1"/>
+	<classpathentry kind="lib" path="lib/junit-3.8.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
